tests/expected_invalid_domain_generic_record.diag.out
<input>:2:19: error: `domain` modules must not declare user-defined generics
    public record Box<T> {
                      ^
